--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1 class="welcome">Welcome to my kingdom</h1>
     <p>Hello and welcome to my travel blog. Here i will share my travel experriences. so lets get started.</p>
 
+    <img src="images/blog1.jpg" alt="beach" height="800" width="1200">
     <div class="coxsbazar">
         <h3 class="title">Cox'sbazar memories</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar lacinia eros vel congue. Aenean in sollicitudin urna, porttitor convallis purus. Maecenas vulputate quam justo, sit amet imperdiet sapien elementum scelerisque. Fusce sed orci dolor. Aenean ac feugiat orci. Quisque justo dolor, pellentesque lacinia eleifend sit amet, pharetra quis massa. Vestibulum egestas purus et erat posuere, in rutrum magna viverra. Aliquam dapibus nibh at enim tincidunt tincidunt. Donec fringilla gravida nisi vel commodo. Nullam viverra enim vitae bibendum laoreet. Nunc lobortis ex eget lorem vulputate gravida a et nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec ornare tortor nec hendrerit tristique. Aenean purus tortor, vulputate ac egestas et, fringilla eu velit. Proin ut tincidunt urna, at lobortis ipsum.</p>
