--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
 
         <p style="font-family: sans-serif; color: khaki;">My name is Nayem</p>
     </div>
+    <div>
+        <h3>My new dummy text</h3>
+        <p>My new website</p>
+    </div>
 </body>
 </html>
